--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,9 @@
     },
     "scripts": {
         "post-install-cmd": [
-            "php artisan vendor:publish --provider=\"FeIron\\Fe_Roles\\Fe_RolesServiceProvider\""
+            "php artisan vendor:publish --provider=\"FeIron\\Fe_Roles\\Fe_RolesServiceProvider\"",
+            "php artisan migrate --path=\"FeIron\\Fe_Roles\\database\\migrations\"",
+            "php artisan db:seed --class=FeIron\\Fe_Roles\\database\\seeder\\RoleSeeder"
         ]
     }
 }
