--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,15 @@
         }
     },
     "scripts": {
-        "post-install-cmd": [
-            "php artisan vendor:publish --provider=\"FeIron\\Fe_Roles\\Fe_RolesServiceProvider\"",
-            "php artisan migrate --path=\"FeIron\\Fe_Roles\\database\\migrations\"",
-            "php artisan db:seed --class=FeIron\\Fe_Roles\\database\\seeder\\RoleSeeder"
+        "post-package-install": [
+            "php ../../../artisan vendor:publish --provider=\"FeIron\\Fe_Roles\\Fe_RolesServiceProvider\"",
+            "php ../../../artisan migrate --path=\"FeIron\\Fe_Roles\\database\\migrations\"",
+            "php ../../../artisan db:seed --class=FeIron\\Fe_Roles\\database\\seeder\\RoleSeeder",
+            "php ../../../artisan Build:BuildUserClass"
+        ],
+        "test":[
+            "echo 'this is cool!!!!'",
+            "php ../../../artisan Build:BuildUserClass"
         ]
     }
 }
