--- a/composer.json
+++ b/composer.json
@@ -32,9 +32,9 @@
     },
     "scripts": {
         "post-package-install": [
-            "php ../../../artisan vendor:publish --provider=\"FeIron\\Fe_Roles\\Fe_RolesServiceProvider\"",
-            "php ../../../artisan migrate --path=\"FeIron\\Fe_Roles\\database\\migrations\"",
-            "php ../../../artisan db:seed --class=FeIron\\Fe_Roles\\database\\seeder\\RoleSeeder",
+            "php ../../../artisan vendor:publish --provider=\"\\feiron\\fe_roles\\Fe_RolesServiceProvider\"",
+            "php ../../../artisan migrate --path=\"\\feiron\\fe_roles\\database\\migrations\"",
+            "php ../../../artisan db:seed --class=\\feiron\\fe_roles\\database\\seeder\\RoleSeeder",
             "php ../../../artisan Build:BuildUserClass"
         ]
     }
