--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,11 @@
     "type": "library",
     "license": "Apache-2.0",
     "require": {
-        "php": "^7.2.1",
+        "php": ">=7.2.1",
         "laravel/framework": ">=5.8"
     },
     "require-dev": {
-        "php": "^7.2.1",
+        "php": ">=7.2.1",
         "laravel/framework": ">=5.8"
     },
     "authors": [
